profiling-using-exp-runner/backup_FINAL_RESULTS/uniquepaths_experiment_1/run_4_repetition_0/energibridge.log
sampling interval: 200, target function: unique_paths_cache, input size: 6
  File "<string>", line 1
    import sys; import os; import numpy as np; sys.path.append(/Users/rr/GreenLab/ProjectCode/profiling-using-exp-runner/packages); import recursive.uniquepaths as module; up = UniquePaths(); up.unique_paths_cache(6,6); 
                                                               ^
SyntaxError: invalid syntax
Energy consumption in joules: 10.258098937988281 for 0.23449302 sec of execution.
